opencell-admin/web/src/main/webapp/stylesheet/custom.css
/* ... */
input[type="submit"]:hover,
.ui-button:hover,
.ui-datatable table .ui-button:hover {
  background: #1A3A6A;
  color: #fff;
  border: 1px solid rgba(0, 32, 80, .1);
}

input[type="text"] .ui-button-text,
.ui-button .ui-button-text,
.ui-datatable table .ui-button-text {
  text-shadow:none;
}

/* .ui-state-disabled, */
/* .ui-widget-content .ui-state-disabled, */
/* .ui-widget-header .ui-state-disabled { */
/*   padding: 4px 4px; */
/* } */

.ui-datatable,
.ui-treetable {
  border-color: #ddd;
}

.ui-widget-header {
  -moz-text-shadow: none;
  -webkit-text-shadow: none;
  text-shadow: none;
}

.ui-datatable,
.ui-treetable,
.ui-corner-all {
  -moz-border-radius: 4px !important;
  -webkit-border-radius: 4px !important;
  border-radius: 4px !important;
}
.ui-datatable-resizable th.ui-resizable-column {
  padding-left: 20px;
}
body .ui-messages>div {
  padding: 10px;
  margin-left: 40px;
}
.ui-corner-top {
  -moz-border-radius-topleft: 0 !important;
  -webkit-border-top-left-radius: 0 !important;
  border-top-left-radius: 0 !important;
  -moz-border-radius-topright: 0 !important;
  -webkit-border-top-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

.ui-inputfield,
.ui-widget-content .ui-inputfield,
.ui-widget-header .ui-inputfield {
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.ui-selectonemenu .ui-selectonemenu-trigger {
  background: #003050;
  border-right: 1px solid #a8a8a8;
  margin-right: -1px;
  margin-top: -1px;
}

.ui-state-highlight {
  background: #264676 !important;
  background-image: none !important;
}

.ui-shadow {
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.ui-inputswitch-on {
  background: #002050 !important;
}

.custom-grid table thead tr th {
  background: #eee !important;
  color: #333;
  font-size: 15px;
  font-weight: normal !important;
  padding: 7px 0;
}

.ui-datatable table thead tr .ui-state-hover {
  border: 1px solid #ddd !important;
}

.ui-tree-draghelper.ui-state-highlight {
  background: none transparent !important;
}

.position-relative {
  position: relative;
}

.text-left {
  text-align: left;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}


.btn-theme-default {
    background: #264676 !important;
    color: #fff !important;
    font-weight: 700 !important;
    text-transform: capitalize !important;
    border: 1px solid rgba(0, 32, 80, .1) !important;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    box-shadow: none !important;
    -webkit-border-radius: 2px !important;
    -moz-border-radius: 2px !important;
    border-radius: 2px !important;
    -webkit-transition: all 300ms ease-in-out 0s !important;
    -moz-transition: all 300ms ease-in-out 0s !important;
    -ms-transition: all 300ms ease-in-out 0s !important;
    -o-transition: all 300ms ease-in-out 0s !important;
    transition: all 300ms ease-in-out 0s !important;
}

.btn-theme-default:focus,
.btn-theme-default:hover {
    background: #1A3A6A !important;
    color: #fff !important;
    border: 1px solid rgba(0, 32, 80, .1) !important;
}

.btn-theme-default:active {
    background: #002050 !important;
    color: #fff !important;
    border: 1px solid rgba(0, 32, 80, .1) !important;
}

/* Custom Styles
====================================== */

input[type="text"] {
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s !important;
  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s !important;
  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s !important;
}

.ui-grid-row {
  border-bottom: 1px solid #ddd;
}

.ui-grid-row:last-child {
  border-bottom: none;
}

.ui-commandlink {
  text-decoration: none;
}

.ui-grid-row .ui-commandlink {
  color: #003050 !important;
}

.ui-grid-row .ui-commandlink:hover::before {
  color: #c2c2e0 !important;
}

.ui-grid-row .ui-widget .ui-widget {
  border-radius: 0 !important;
}

.ui-panel-titlebar {
  color: #333;
  text-align: center!important;
}

.ui-separator {
  display: none;
}

.ui-paginator {
  background: #eee;
}

.ui-inputswitch {
  /*height: 18px;*/
  border: none !important;
}

.ui-inputswitch .ui-inputswitch-on,
.ui-inputswitch .ui-inputswitch-off {
  top: -1px;
  padding-top: 6px;
}

.ui-inputswitch.ui-state-disabled {
  opacity: 1;
  padding: 0;
}

.switch-wrapper {
  padding: 0;
}

.switch-wrapper > div {
  padding: 0 !important;
}

.switch-wrapper > div > div {
  border: 1px solid #ddd !important;
}

.switch-wrapper .ui-inputswitch-handle {
  border: none !important;
}

.switch-wrapper .ui-inputswitch .ui-inputswitch-off {
  height: 25px;
  padding-top: 0;
}

.switch-wrapper .ui-inputswitch .ui-inputswitch-off span {
  background: #002050;
  height: 19px;
  color: #fff;
  padding-top: 6px;
}

.ui-breadcrumb ul li a {
  text-decoration: none;
}

.ui-breadcrumb ul li a:hover {
  color: #264676;
}

.ui-breadcrumb ul li .ui-menuitem-link {
  margin-top: 2px;
}

.ui-breadcrumb  .ui-breadcrumb-chevron {
  margin-top: 1px;
}

/*--------- */
#topbar-wrapper {
  background: #002050;
  padding: 0 0 0 15px;
}

#topbar-wrapper .search-wrapper {
  padding: 15px 15px 0 0;
  border: none;
  float: right;
}

#topbar-wrapper .search-wrapper input[type="text"] {
  width: 178px;
  box-sizing: border-box;
}

#topbar-wrapper .search-wrapper a {
  display: none;
}

#layout-topbar-cover {
  background: #fff;
  color: #2f2f2f;
  font-size: 15px;
  font-weight: normal;
  line-height: 1.5;
  font-family: Roboto, 'Source Sans Pro', Arial, sans-serif;
  font-size: inherit;
  font-size: 100%;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  text-rendering: auto;
}

#layout-topbar {
  line-height: 40px;
  /*margin: 0 auto 10px;*/
}

#layout-topbar ul {
  margin: 0;
}

#layout-topbar li a {
  color: #fff;
  text-decoration: none;
}
/* ... */

